# fp2024

EUsoltsev/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  parser.ml  parser.mli  typing.ml  typing.mli
EUsoltsev/tests/: ast_check.t  dune  inferencer_tests.ml  interpreter_tests.ml  parser_tests.ml
