(library
 (name tests)
 (libraries EUsoltsev_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to ast_check)
 (deps
  ../bin/main.exe
  my_test.ml
  manytests/typed/001fac.ml
  manytests/typed/002fac.ml
  manytests/typed/003fib.ml
  manytests/typed/004manyargs.ml
  manytests/typed/005fix.ml
  manytests/typed/006partial.ml
  manytests/typed/006partial2.ml
  manytests/typed/006partial3.ml
  manytests/typed/007order.ml
  manytests/typed/008ascription.ml
  manytests/typed/009let_poly.ml))
